welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: not found: value Direction
    if (getDirection ()== Direction.EST){
                          ^